Neo-Features/Theme/Features/Neo-Footer/Neo-Footer-Events.css
@media not (-moz-pref("neo.features.disable")) {
    @media not (-moz-pref("neo.features.footer.disabled")) {
        @media not (-moz-bool-pref: "neo.features.footer.keep.max-height.enabled") {
            :root:not([animating-background="true"]):not([customizing=""]) {
                #navigator-toolbox:not(:has(#zen-workspaces-button> .subviewbutton:only-child)) {
                    @media not (-moz-bool-pref: "neo-features-workspace-button-hidden") {

                        #zen-sidebar-foot-buttons:hover:not(:has(#zen-workspaces-button:hover)),
                        #zen-sidebar-foot-buttons:has(toolbarbutton[open="true"]) {

                            transition: width 0.3s 200ms ease,
                                        height 0.3s 200ms ease,
                                        max-height 1s 200ms ease,
                                        top 0.5s ease 200ms,
                                        bottom 0.5s ease 200ms,
                                        opacity 1s ease 200ms !important;

                            &::after {
                                transition: width 0.3s 300ms ease,
                                            height 0.2s 300ms ease,
                                            top 0.3s ease 200ms,
                                            bottom 0.3s ease 200ms,
                                            opacity 1s ease 200ms,
                                            background-color 0.4s ease,
                                            box-shadow 0.5s ease !important;
                            }

                            #zen-workspaces-button {

                                transition: width 0.3s 200ms ease,
                                            height 0.3s 200ms ease,
                                            top 0.8s ease 200ms,
                                            bottom 0.8s ease 200ms,
                                            opacity 0.5s ease 200ms !important;
                            }

                            /* shared modifications */

                            #navigator-toolbox[zen-sidebar-expanded] & {

                                @media -moz-pref("neo.features.footer.fit-to-content") {
                                    --Aux-Footer-Height: 100% !important;
                                }
                                /* expanded tweaks */
                                &::after {
                                    opacity: 0 !important;
                                    width: 0px !important;
                                    top: 0px !important;
                                    @media not -moz-pref("neo.features.footer.fit-to-content") {
                                        height: 0px !important;
                                    }
                                }

                                #zen-workspaces-button {
                                    @media not -moz-pref("neo.features.footer.fit-to-content") {
                                        height: 0px !important;
                                        opacity: 0 !important;
                                    
                                        pointer-events: none !important;
                                    }
                                }

                                @media (-moz-bool-pref: "neo.features.footer.expanded.max-height.enabled") {
                                    /* When the footer height is set to a fixed value, the height of the footer is set to that value. */
                                    --Aux-Footer-Height: var(--Neo-Footer-Max-Height) !important;
                                }
                            }

                            #navigator-toolbox:not([zen-sidebar-expanded]) & {

                                /* collapsed tweaks */
                                &::after {
                                    height: 5px;
                                    width: 70%;
                                    background-color: var(--Neo-Elements) !important;
                                    
                                    @media not -moz-pref("neo.footer.position", "top") {
                                        bottom: calc(var(--Aux-Footer-Indicator-Position) + var(--Neo-Footer-Indicator-Size-Sidebar-Collapsed) + 5px);
                                    }

                                    @media -moz-pref("neo.footer.position", "top") {
                                        top: calc(var(--Aux-Footer-Indicator-Position) + var(--Neo-Footer-Indicator-Size-Sidebar-Collapsed) + 5px);
                                    }
                                }

                                #zen-workspaces-button {

                                    opacity: 0 !important;
                                    
                                    pointer-events: none !important;

                                    @media not -moz-pref("neo.footer.position", "top") {
                                        bottom: calc(var(--Aux-Footer-Height) * -1);
                                    }

                                    @media -moz-pref("neo.footer.position", "top") {
                                        top: calc(var(--Aux-Footer-Height) * -1);
                                    }
                                }
                            }

                            &>.toolbarbutton-1:not(#zen-workspaces-button),
                            &>.toolbaritem-combined-buttons,
                            &>#zen-toggle-compact-mode {
                                opacity: 1 !important;
                                pointer-events: all !important;
                            }
                        }

                        #zen-sidebar-foot-buttons:has(#zen-workspaces-button:hover) {
                            #navigator-toolbox[zen-sidebar-expanded] & {
                                &::after {
                                    width: 80% !important;

                                    transition: width 0.3s 30ms ease !important;
                                }
                            }
                        }
                    }
                }
            }
        }
    }
}

